# ts-compilator-for-java

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.MD  README.md  Resume.md  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
backend/: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  class_.py  class_exercise_list.py  class_member.py  exercise.py  exercise_list.py  exercise_list_item.py  language.py  organization.py  submission.py  test_case.py  user.py
backend/app/modules/auth/: router.py  service.py
backend/app/modules/classes/: router.py  service.py
backend/app/modules/exercise_lists/: router.py  service.py
backend/app/modules/exercises/: router.py  service.py
backend/app/modules/languages/: router.py  service.py
backend/app/modules/organizations/: router.py  service.py
backend/app/modules/submissions/: router.py  service.py
backend/app/schemas/: __init__.py  auth.py  base.py  classes.py  exercise_lists.py  exercises.py  languages.py  organizations.py  submissions.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_extend_userrole_with_system.py  a1b2c3d4e5f6_languages_and_policy.py  b2c3d4e5f6a7_languages_and_policy.py  f77e31d3931b_initial_schema.py
backend/scripts/: seed.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_classes.py  test_coverage_completion.py  test_coverage_gap_filler.py  test_exercise_lists.py  test_exercise_policy_and_snapshot.py  test_exercises.py  test_languages.py  test_languages_schema.py  test_organizations.py  test_submissions.py  test_users.py
(+109 files in other folders)
