[project]
name = "ts-compilator-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyJWT>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    "email-validator>=2.2.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "faker>=33.0.0",
    "pytest-cov>=6.0.0",
    "harlequin[postgres]>=2.5.1",
    "taskipy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.taskipy.tasks]
dev     = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
start   = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
seed    = "python scripts/seed.py"
test    = "pytest"
cov     = "pytest --cov=app --cov-report=term-missing"
migrate = "alembic upgrade head"
rev     = "alembic revision --autogenerate -m"
